test(scrum-99): convert consumer + deserializer tests to @QuarkusTest for jacoco coverage
The quarkus-jacoco extension only instruments code paths exercised by
@QuarkusTest runs — standalone JUnit/Mockito tests do not show up in the
coverage report. This explained the 0.0% coverage reported on Sonar for
3 consumers and 2 deserializers despite passing pure-Mockito tests.

Conversions:
- EventCancelledConsumerTest (5 cases): @QuarkusTest, @InjectMock @RestClient
  on the 2 clients, @Inject the consumer, exercise via direct method call
  on the CDI bean. Persisted rows asserted via Notification.list().
  Coverage now includes the type filter, event-resolve null, empty/null
  attendee list, fan-out loop, creator-skip + null-skip.
- EventUpdatedConsumerTest (5 cases): same shape.
- AttendanceCreatedConsumerTest (4 cases): same shape, single REST client.
- EventLifecycleEventDeserializerTest (3 cases): @QuarkusTest so the
  Quarkus-configured ObjectMapper handles the Instant round-trip and
  jacoco instruments the deserializer.
- AttendanceCreatedEventDeserializerTest (3 cases): same.

New EventResourceDuplicateTest cases (boost EventService.duplicate from
83.3% toward 100%):
- duplicate_sourceWithNullDates: branches `source.startDate != null` ternary
  and `source.endDate != null` ternary.
- duplicate_sourceWithNullTags: branch `source.tags == null` for tag copy.
- duplicate_sourceWithLongTitle: title truncation when base > 114 chars.
- duplicate_coOrganizerAccepted: isCreatorOrAcceptedCoOrganizer branch
  (previously only creator + admin paths were tested).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>